# C-Gravsim

SFMLtry4/: CMakeLists.txt  gravObject.cpp  main.cpp
